--- a/config.html
+++ b/config.html
@@ -191,7 +191,7 @@
                 }
             },
             delModel: function (obj) {
-                app.models = app.models.filter(e => e.title !== obj.title)
+                app.models = app.models.filter(e => e.contentCode !== obj.contentCode)
             },
         },
     })
