--- a/config.html
+++ b/config.html
@@ -205,6 +205,23 @@
             console.log("use cache:" + cacheStr)
             app.models = JSON.parse(cacheStr);
         }
+        var sortFunc = function (a, b) {
+            if (typeof a.contentCode !== 'string' || typeof b.contentCode !== 'string') {
+                return 1;
+            }
+            var fieldA = a.contentCode.toLowerCase(); // 将字段转换为小写以进行不区分大小写的排序
+            var fieldB = b.contentCode.toLowerCase(); // 将字段转换为小写以进行不区分大小写的排序
+
+            // 使用 localeCompare 进行字符串的比较
+            if (fieldA < fieldB) {
+                return -1;
+            }
+            if (fieldA > fieldB) {
+                return 1;
+            }
+            return 0; // 相等的情况
+        };
+        app.models = app.models.sort(sortFunc);
     }
 
     // localStorage.removeItem('models')
