1.修复大于小于符号显示成html 实体编码的问题

--- a/config.html
+++ b/config.html
@@ -262,6 +262,8 @@
         var contentLi = []
         for (var j = 1; j <= inputSum; j++) {
             var input = document.getElementById("input" + j).innerHTML
+            input = input.replaceAll("&lt;", "<")
+            input = input.replaceAll("&gt;", ">")
             if (input != null && input.length > 0) {
                 contentLi.push(input)
             }
