--- a/config2.html
+++ b/config2.html
@@ -341,6 +341,8 @@
             }
         }
         var content = document.getElementById("input1").innerHTML.replaceAll("<br>", "").trimEnd()
+        content = content.replaceAll("&lt;", "<")
+        content = content.replaceAll("&gt;", ">")
         console.log("inList: " + inList)
         if (inList) {
             app.models2[ret].title = inputName
