--- a/config3.html
+++ b/config3.html
@@ -239,6 +239,8 @@
             }
         }
         var content = document.getElementById("input1").innerHTML.replaceAll("<br>", "").trimEnd()
+        content = content.replaceAll("&lt;", "<")
+        content = content.replaceAll("&gt;", ">")
         console.log("inList: " + inList)
         if (inList) {
             app.models3[ret].title = inputName
